--- a/CLOCK_CHAT/templates/adminuser/base.html
+++ b/CLOCK_CHAT/templates/adminuser/base.html
@@ -7,26 +7,28 @@
   <title>Admin Panel</title>
   <!-- Bootstrap and Font Awesome CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{% static 'styles.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-  <!-- Toast Message Implementation -->
-  <script>
-    window.djangoMessages = [
-    {% for message in messages %}
-      {
-        "tags": "{{ message.tags }}",
-        "message": "{{ message|escapejs }}"
-      }{% if not forloop.last %},{% endif %}
-    {% endfor %}
-    ];
-    console.log("djangoMessages:", window.djangoMessages);
-  </script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <!-- Include external toast script -->
-  <script src="{% static 'js/toast_message.js' %}"></script>
-  <!-- End Toast -->
+    <!-- Toast Message Implemention-->
+   
+    <script>
+        window.djangoMessages = [
+        {% for message in messages %}
+            {
+            "tags": "{{ message.tags }}",
+            "message": "{{ message|escapejs }}"
+            }{% if not forloop.last %},{% endif %}
+        {% endfor %}
+        ];
+        console.log("djangoMessages:", window.djangoMessages);  // Debug output
+    </script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  
+    <!-- Include external toast script -->
+    <script src="{% static 'js/toast_message.js' %}"></script>
+    <!-- End Toast -->
 
   <style>
     /* CSS Variables */
@@ -191,7 +193,6 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="{% static 'scripts.js' %}"></script>
   <script>
     // Toggle sidebar: for desktop, add/remove "hide" class; for mobile, toggle "show" class.
     $("#sidebarToggle").click(function(e) {
