--- a/CLOCK_CHAT/templates/adminuser/base.html
+++ b/CLOCK_CHAT/templates/adminuser/base.html
@@ -161,18 +161,6 @@
     #sidebar i {
       transition: color 0.3s ease;
     }
-    
-    body:not(.dark-mode) i:nth-child(1) { color: red; }     
-    body:not(.dark-mode) i:nth-child(2) { color: green; }
-    body:not(.dark-mode) i:nth-child(3) { color: yellow; }
-    body:not(.dark-mode) i:nth-child(4) { color: purple; }
-    body:not(.dark-mode) i:nth-child(5) { color: blue; }
-    
-    body.dark-mode i:nth-child(1) { color: yellow; }       
-    body.dark-mode i:nth-child(2) { color: purple; }
-    body.dark-mode i:nth-child(3) { color: red; }
-    body.dark-mode i:nth-child(4) { color: green; }
-    body.dark-mode i:nth-child(5) { color: blue; }
   </style>
 </head>
 <body>
@@ -269,48 +257,61 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
-    // Toggle sidebar: for desktop, add/remove "hide" class; for mobile, toggle "show" class.
-    $("#sidebarToggle").click(function(e) {
-      e.preventDefault();
-      if ($(window).width() < 768) {
-        $("#sidebar").toggleClass("show");
-      } else {
-        $("#sidebar").toggleClass("hide");
+    $(document).ready(function () {
+      // Function to toggle dark mode
+      function toggleDarkMode(enableDarkMode) {
+        if (enableDarkMode) {
+          $("body").addClass("dark-mode");
+          $(".navbar, #sidebar, #sidebar ul li a").addClass("dark-mode");
+          $("#themeToggle i").removeClass("fa-sun").addClass("fa-moon");
+          $("i, h4, p, a, .sidebar-header, .navbar").css("color", "white"); // Text & icons white
+          $("body, #sidebar").css("background-color", "#121212"); // Dark background
+          localStorage.setItem("theme", "dark");
+        } else {
+          $("body").removeClass("dark-mode");
+          $(".navbar, #sidebar, #sidebar ul li a").removeClass("dark-mode");
+          $("#themeToggle i").removeClass("fa-moon").addClass("fa-sun");
+          $("i, h4, p, a, .sidebar-header, .navbar").css("color", "black"); // Text & icons black
+          $("body").css("background-color", "#f8f9fa"); // Light background
+          $("#sidebar").css("background-color", "#ffffff"); // Sidebar light background
+          localStorage.setItem("theme", "light");
+        }
       }
+  
+      // Check localStorage for saved theme preference
+      if (localStorage.getItem("theme") === "dark") {
+        toggleDarkMode(true);
+      } else {
+        toggleDarkMode(false);
+      }
+  
+      // Click event for theme toggle button
+      $("#themeToggle").click(function (e) {
+        e.preventDefault();
+        if ($("body").hasClass("dark-mode")) {
+          toggleDarkMode(false);
+        } else {
+          toggleDarkMode(true);
+        }
+      });
+  
+      // Sidebar toggle functionality
+      $("#sidebarToggle").click(function (e) {
+        e.preventDefault();
+        if ($(window).width() < 768) {
+          $("#sidebar").toggleClass("show");
+        } else {
+          $("#sidebar").toggleClass("hide");
+        }
+      });
+  
+      // Mobile sidebar close button
+      $("#sidebarClose").click(function (e) {
+        e.preventDefault();
+        $("#sidebar").removeClass("show");
+      });
     });
-    // Mobile: close sidebar when close button is clicked.
-    $("#sidebarClose").click(function(e) {
-      e.preventDefault();
-      $("#sidebar").removeClass("show");
-    });
-    // Toggle dark/light theme.
-    $("#themeToggle").click(function(e) {
-      e.preventDefault();
-      $("body").toggleClass("dark-mode");
-      var icon = $(this).find("i");
-      icon.toggleClass("fa-sun fa-moon");
-    });
-  </script>
+  </script>  
 </body>
 </html>
 
-
-
-<script>
- {% comment %} The js for toggled & change the color of the admin panel {% endcomment %}
-$("#menu-toggle").click(function(e) {
-    e.preventDefault();
-    $("#wrapper").toggleClass("toggled");
-});
-
-$("#theme-toggle").click(function(e) {
-    e.preventDefault();
-    $("body").toggleClass("dark-mode");
-    var icon = $(this).find("i");
-    if (icon.hasClass("fa-sun")) {
-        icon.removeClass("fa-sun").addClass("fa-moon");
-    } else {
-        icon.removeClass("fa-moon").addClass("fa-sun");
-    }
-});
-</script>
