--- a/CLOCK_CHAT/templates/adminuser/base.html
+++ b/CLOCK_CHAT/templates/adminuser/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Panel</title>
+  <title>{% block title %}Quick-come Admin{% endblock %}</title>
   <!-- Bootstrap and Font Awesome CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -174,6 +174,9 @@
       <button class="btn btn-secondary mr-2" id="themeToggle">
         <i class="fas fa-sun"></i>
       </button>
+      
+      {% block navbar_extra %}{% endblock %}
+
       <a href="{% url 'logout_myadmin' %}" class="btn btn-danger">Logout</a>
     </div>
   </nav>
