--- a/CLOCK_CHAT/templates/adminuser/chats/chat_update.html
+++ b/CLOCK_CHAT/templates/adminuser/chats/chat_update.html
@@ -1,6 +1,9 @@
 {% extends "adminuser/base.html" %}
 {% load static %}
 
+{% block title %}Clock-Chat Admin-Chat Update{% endblock %}
+
+{% black content %}
 
 <style>
         body {
@@ -133,5 +136,4 @@
             }
         }
     </script>
-</body>
-</html>
+{% endblock %}
