--- a/CLOCK_CHAT/templates/adminuser/base.html
+++ b/CLOCK_CHAT/templates/adminuser/base.html
@@ -220,7 +220,7 @@
       </a>
       <ul class="collapse list-unstyled" id="chatsSubmenu">
           <li>
-              <a href="#"><i class="fas fa-list-alt"></i> Chats List</a>
+              <a href="{% url 'admin_chats_list' %}"><i class="fas fa-list-alt"></i> Chats List</a>
           </li>
           <li>
               <a href="#"><i class="fas fa-plus"></i> Chat Create</a>
