--- a/CLOCK_CHAT/templates/enduser/Chats/test.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/test.html
@@ -50,7 +50,7 @@
 
             <div class="bottom-icons">
                 <span class="material-icons">chat</span>
-                <span class="material-icons">motion_photos_on</span>
+                <span class="material-icons" href="/status/">motion_photos_on</span>
                 <span class="material-icons">settings</span>
                 <i class="fa-solid fa-power-off" onclick="window.location.href='{% url 'log_out' %}'" style="color: #000000;"></i>
             </div>
