Fix HTML formatting in chat list template

--- a/CLOCK_CHAT/templates/adminuser/chats/chats_list.html
+++ b/CLOCK_CHAT/templates/adminuser/chats/chats_list.html
@@ -111,7 +111,7 @@ input:checked + .slider:before {
     </style>
 
 
-   <h2 style=color:#b87639>Chat List </h2>
+   <h2 style="color:#b87639;">Chat List </h2>
 
    <div class="search-box">
       <input type="text" placeholder="Search...">
@@ -171,7 +171,6 @@ input:checked + .slider:before {
                           
               
         </tbody>
-    </table>
-    <p align="right"><strong>Page:</strong> 1</p>
+    </table>    
 
 {% endblock %}
