--- a/CLOCK_CHAT/templates/enduser/Chats/test.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/test.html
@@ -55,7 +55,7 @@
 
         <div class="bottom-icons">
           <span class="material-icons">chat</span>
-          <span class="material-icons">motion_photos_on</span>
+          <span onclick ="window.location.href='{% url 'status_list' %}'" class="material-icons">motion_photos_on</span>
           <span class="material-icons">settings</span>
           <i
             class="fa-solid fa-power-off"
