Refactor status creation and retrieval views to enforce authentication and role requirements; update URL reference in status template.

--- a/CLOCK_CHAT/templates/status/status.html
+++ b/CLOCK_CHAT/templates/status/status.html
@@ -194,7 +194,7 @@
 
         <div class="floating-icons">
             <div class="floating-button edit-button">✎</div>
-            <div onclick="window.location.href='{% url '/status_create/' %}'" class="floating-button">📷</div>
+            <div onclick="window.location.href='{% url 'status_create' %}'" class="floating-button">📷</div>
 
         </div>
 
