Remove unused assets and update chat_update.html template structure

--- a/CLOCK_CHAT/templates/adminuser/chats/chat_update.html
+++ b/CLOCK_CHAT/templates/adminuser/chats/chat_update.html
@@ -3,7 +3,7 @@
 
 {% block title %}Clock-Chat Admin-Chat Update{% endblock %}
 
-{% black content %}
+{% block content %}
 
 <style>
         body {
